...
import com.epfl.beatlink.ui.navigation.AppIcons.filledProfile
import com.epfl.beatlink.ui.navigation.AppIcons.filledSearch
import com.epfl.beatlink.ui.navigation.AppIcons.outlinedLibrary

object Route {
  const val WELCOME = "Welcome"
  const val HOME = "Home"
  const val SEARCH = "Search"
  const val LIBRARY = "Library"
  const val PROFILE = "Profile"
}

object Screen {
  const val WELCOME = "Welcome Screen"
  const val LOGIN = "Login Screen"
  const val REGISTER = "Register Screen"
...
