...
          BottomNavigationMenu(
              onTabSelect = { route -> navigationActions.navigateTo(route) },
              tabList = LIST_TOP_LEVEL_DESTINATION,
              selectedItem = navigationActions.currentRoute())
        }
      },
      modifier = Modifier.testTag("searchScreen")) { paddingValues ->
        Column(
            modifier =
                Modifier.testTag("searchScreenColumn")
                    .fillMaxSize()
                    .padding(paddingValues)
                    .verticalScroll(rememberScrollState())
...
