...
import com.android.sample.ui.navigation.Screen

@Composable
fun LibraryScreen(navigationActions: NavigationActions) {

  Scaffold(
      modifier = Modifier.testTag("libraryScreen"),
      topBar = {
        PageTopAppBar(
            "My Library",
            "libraryTitle",
            listOf {
              CornerIcons(
...
